# my-rust-nes-emulator

./: .gitignore  Cargo.toml  LICENSE  README.md  test_all.sh
src/: main.rs  system.rs  type_alias.rs
src/system/: apu.rs  apu_channels.rs  channels.rs  cpu.rs  cpu_bus.rs  debugger.rs  input.rs  joystick.rs  logger.rs  ppu.rs  ppu_channels.rs  ram.rs  rom.rs  test.rs
src/system/apu/: clock.rs  communication.rs  flags.rs  mixer.rs  noise_synth.rs  speaker.rs  square_synth.rs  triangle_synth.rs
src/system/apu/flags/: frame_counter_flags.rs  status_flags.rs
src/system/cpu/: bus.rs  clock.rs  flags.rs  interrupts.rs  opcodes.rs  program_iterator.rs  program_rom.rs  ram.rs  stack.rs
src/system/input/: emulated_joystick.rs  physical_joystick.rs  physical_keyboard.rs
src/system/ppu/: bus.rs  character_rom.rs  clock.rs  communication.rs  flags.rs  metrics.rs  oam.rs  palette.rs  pattern_table.rs  pattern_tables.rs  rendering.rs  sprites.rs  textures.rs  vram.rs
src/system/ppu/flags/: bus_pointer_latch.rs  control_flags.rs  mask_flags.rs  scroll_flags.rs  status_flags.rs
src/system/ppu/sprites/: pixel_hit_matrix.rs  sprite_zero_hit_detector.rs
src/system/ppu/textures/: texture_pixel_matrix.rs
src/system/rom/: character_rom.rs  program_rom.rs
src/system/test/: cpu_blargg_test.rs  cpu_kevtris_nestest.rs  joystick_test.rs  ppu_blocks_test.rs  ppu_litewall_test.rs  ppu_physics_test.rs  ppu_scroll_test.rs  ppu_show_pattern_table.rs  ppu_sprite_overflow_test.rs  ppu_sprite_zero_hit_test.rs  ppu_spritecans_test.rs  ppu_testsroms.rs  snake.rs
src/system/test/cpu_kevtris_nestest/: failure_codes.txt  readme.txt
src/system/test/snake/: snake.asm
