[package]
name = "nes-emulator"
version = "1.0.0"
edition = "2021"

[dependencies]
# generic Result<> with any error
anyhow = "1.0.79"

# random number generator
rand = "0.8.5"

# hashmap! literal macro
maplit2 = "1.0.5"

# iter extensions
itertools = "0.12.0"

# String.substring()
substring = "1.4.5"

# Enum utils
strum = "0.26.1"
strum_macros = "0.26.1"

# Faster channels
flume = "0.11.0"

# Simple DirectMedia Layer bindings
sdl2 = "0.36.0"

# CPAL Cross Platform Audio Library
cpal = "0.15.2"

# Date/Time library
chrono = "0.4.34"