[package]
name = "nes-emulator"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = 0

[profile.dev]
opt-level = 0

[dependencies]
# generic Result<> with any error
anyhow = "1.0.79"

# random number generator
rand = "0.8.5"

# hashmap! literal macro
maplit2 = "1.0.5"

# iter extensions
itertools = "0.13.0"

# String.substring()
substring = "1.4.5"

# Enum utils
strum = "0.26.1"
strum_macros = "0.26.1"

# Faster channels
flume = "0.11.0"

# Simple DirectMedia Layer bindings
sdl2 = "0.37.0"

# CPAL Cross Platform Audio Library
cpal = "0.15.2"

# Linux API bindings
nix = "0.29.0"

# Joystick Linux API wrapper
joydev = "0.3.1"

# Date/Time library
chrono = "0.4.34"

# ZIP compression library
zip = "2.1.3"

# MD5 hash
md5 = "0.7.0"